--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -2153,8 +2153,7 @@ predominantly other students. The process of obtaining this feedback was
 separated into two stages.
 
 The first was to measure how intuitive the user interface is which was achieved
-by giving a user a set of instructions as seen in figure \ref{fig:instructions}
-\textsuperscript{\textattachfile{attached_documents/user_feedback.xlsx}{\textcolor{skyblue}{file}}}.
+by giving a user a set of instructions as seen in figure \ref{fig:instructions}.
 A score would be given for each task based on how easily the user was able to
 complete it.
 
